css/build.css
fl-list-repeater {
  display: flex;
}

fl-list-repeater.vertical {
  flex-direction: column;
}

fl-list-repeater.horizontal {
  flex-direction: row;
}

fl-list-repeater .list-repeater-load-error {
  text-align: center;
}

fl-list-repeater-row {
  position: relative;
}

.mode-interact fl-list-repeater-row[data-view] {
  border: 1px dashed #ccc;
}

.mode-interact fl-list-repeater-row[data-view].fl-view-empty {
  border: none;
}

.mode-interact fl-list-repeater-row.disabled {
  background-color: rgba(126, 126, 126, 0.2);
  pointer-events: none;
  opacity: 0.5;
}

.mode-interact [draggable="true"] fl-list-repeater-row.disabled [draggable="true"],
.mode-interact fl-list-repeater-row.disabled [data-widget-package="com.fliplet.text"] > * {
  pointer-events: none !important;
}

fl-list-repeater-row > [data-view-placeholder] {
  text-align: center;
  padding: 15px;
}

fl-list-repeater-row.disabled > [data-view-placeholder] {
  opacity: 0;
}

.mode-interact .fl-view-empty {
  border: 1px dotted #d4d4d4 !important;
  color: #6a6868 !important;
  font-family: "Open Sans", sans-serif !important;
  font-size: 12px !important;
  padding: 15px;
  text-align: center;
}

.component-error-before::before {
  content: "Incorrect component placement" !important;
}

.component-error-before:before {
  border-top-right-radius: 10px !important;
  position: relative !important;
  padding: 5px;
  font-size: 12px;
  color: white;
  background: red !important;
  top: 0 !important;
  left: 0;
  height: 30px;
  z-index: 5;
}

